Fix about section spacing

--- a/src/layout/components/about.sass
+++ b/src/layout/components/about.sass
@@ -5,7 +5,6 @@
 .about
   min-height: 100vh
   width: 100vw
-  padding: $about-padding
   position: relative
   z-index: -1
   display: flex
